Fix alignment of arrow-icons in status-bar

--- a/styles.less
+++ b/styles.less
@@ -319,6 +319,12 @@ status-bar-file{
 }
 
 
+/* Fix margins of status-bar icons */
+status-bar-git .commits-ahead-label:before{
+	margin-right: 2px;
+}
+
+
 /* Undo distractions added by atom/atom#18738 */
 .grammar-selector .pull-right > .badge{
 	all: unset;
